examples/test/testpolicy8279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8279
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value12
          key43: value15
          key40: value29
      podSelector:
        matchLabels:
          key13: value6
